--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Basic CRUD Node Back-End",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "keywords": [
     "node",
@@ -12,6 +13,10 @@
     "crud"
   ],
   "author": "WilliamJohnsonJr - https://github.com/williamjohnsonjr",
+  "repository": {
+  "type": "git",
+  "url": "git://github.com/WilliamJohnsonJr/node-server"
+  },
   "license": "MIT",
   "dependencies": {
     "express": "^4.15.2"
